[package]
name = "urlfreezer_client"
version = "0.1.0"
edition = "2021"
type="lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="1.0"
serde_derive="1.0"
surf={ version ="2.3", optional=true}
ureq={ version ="2.3", optional=true , features = ["json"] }
thiserror="1.0"
http-types = {version = "2.5", optional=true}
csv = { version = "1.1", optional=true}
structopt = {version = "0.3" , optional =true}

[dev-dependencies]
wiremock = "0.5"
async-std = {version="1.10", features=["attributes"]}
serde_json ="1.0"
httpmock = "0.6"

[[bin]]
name="urlfreezer"
required-features=["cli"]

[features]
blocking=["ureq"]
async = ["surf", "http-types"]
default = ["blocking"]
cli = ["structopt", "csv", "blocking"]


